fix(CIMD-4372): fix idempotency test, deterministic defaults, entity shrink bug (I2-I4, I7-I8, M8-M9)
Whole-branch review fixes, batch 2:

- I2: repeats_the_same_body_for_the_same_idempotency_key now sleeps past a second
  boundary between posts, so a matching body is proof of replay rather than a
  timestamp-truncation coincidence. Add IdempotencyCacheTest covering the
  request-binding rule and eviction directly.
- I3: CatalogueLoader wrapped its maps in Map.copyOf(...), whose iteration order is
  randomised per JVM. Two field-paths.yaml rows write the same schema path
  (warrantContactDetailsLine1); switch to order-preserving unmodifiableMap and
  deliberately choose "Clamping Contractor name" (posted by 2 codes) over
  "Process Server Name" (1 code) as the default winner, documented in the YAML
  and pinned by a new assembler test.
- I4: NowsDataItemsAssembler.defaultFor() unioned every field-paths.yaml row for a
  root, so posting an additional fields:[] result code could shrink an entity's
  content (ACNOTE alone: 5 terms fields; ACNOTE+AEOC: 1). defaultFor() now emits
  only baseline:true rows for object-typed roots (matching mergeBaselineGaps'
  floor) while keeping the full write for scalar roots. New test posts a
  fields:[] code alone vs. alongside a code that contributes one field, and
  asserts the entity never gets poorer.
- I7: SeedStore.externalSeed() had zero executed lines — every test used
  SeedStore(""), which short-circuits before Path.resolve ever runs. Add @TempDir
  tests for external-over-classpath precedence, fall-through on a missing file,
  and the traversal guard with a non-blank seedDir.
- I8: SeedStore's javadoc said case URNs are "E followed by 9 digits"; the actual
  (and only) traversal guard is `^[A-Za-z0-9-]{1,36}$`. Fix the javadoc and add a
  README "Known gaps" line.
- M8: deleted deduplicates_a_field_required_by_more_than_one_code (posted FSN+REM,
  which have identical field lists — indistinguishable from a real dedup), with